# SLA-Breach-Predictor

./: .gitignore  AI_Usage_Note.md  Demo Video Link.txt  Prompt_Document_Token_Optimized.md  README.md  app.py  pyproject.toml  requirements.txt  test.py
Sample_data/: Sample_SLA_Data.md
Supporting_Documents/: Supporting_Documents.md
Test_cases/: Test_Cases.md
src/: dynamodb_service.py  llm_service.py  sla_engine.py
