[project]
name = "sla-breach-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.24",
    "groq>=1.4.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "python-dotenv>=1.2.2",
    "pytz>=2026.2",
    "streamlit>=1.58.0",
    "streamlit-autorefresh>=1.0.1",
]
